--- a/styles/blog-post.css
+++ b/styles/blog-post.css
@@ -1,4 +1,46 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
-  }
-  
+	font-family: Arial, Helvetica, sans-serif;
+}
+
+.avatar {
+	border-radius: 50%;
+	height: 5%;
+	width: 5%;
+}
+
+.author {
+	display: flex;
+	align-items: center;
+}
+
+.author-text {
+	display: flex;
+
+	flex-direction: column;
+	justify-content: center;
+	padding: 1em;
+}
+
+.link {
+	color: rgb(66, 143, 211);
+	text-decoration: none;
+	font-size: 3vh;
+}
+
+.accent {
+	color: rgb(66, 143, 211);
+}
+
+.main-image {
+	width: 100%;
+	height: 100%;
+}
+
+footer {
+	background-color: rgb(138, 138, 160);
+	padding-top: 1%;
+	padding-left: 1%;
+	padding-bottom: 3%;
+    border-radius: 1%;
+    color: lavender;
+}
