--- a/styles/blog-post.css
+++ b/styles/blog-post.css
@@ -1,3 +1,5 @@
+@import "footer.css";
+
 body {
 	font-family: Arial, Helvetica, sans-serif;
 }
@@ -34,13 +36,4 @@ body {
 .main-image {
 	width: 100%;
 	height: 100%;
-}
-
-footer {
-	background-color: rgb(138, 138, 160);
-	padding-top: 1%;
-	padding-left: 1%;
-	padding-bottom: 3%;
-    border-radius: 1%;
-    color: lavender;
 }
