--- a/styles/index.css
+++ b/styles/index.css
@@ -1,73 +1,7 @@
-body {
-	font-family: Arial, Helvetica, sans-serif;
-}
-header {
-	margin-left: 0.5rem;
-}
+@import "footer.css";
 
-.sidebar {
-	display: flex;
-	flex-direction: column;
-	margin-left: 0.5rem;
-}
+@import "homepage.css";
 
-.link {
-	color: rgb(66, 143, 211);
-	text-decoration: none;
-	font-size: 3vh;
-}
-main{
-	margin-left: 0.5rem;
-}
+@import "non-mobile.css";
 
-footer {
-	background-color: rgb(138, 138, 160);
-	padding-top: 1%;
-	padding-left: 1%;
-	padding-bottom: 3%;
-	border-radius: 1%;
-	color: lavender;
-}
 
-article {
-	background-color: rgb(242, 242, 255);
-	margin: 1%;
-	padding: 1%;
-}
-
-@media (min-width: 600px) {
-	body {
-		min-height: 100vh;
-		margin: 0;
-
-		display: grid;
-		grid-template-areas: "hd hd hd hd" "sd main main main" "ft ft ft ft";
-		grid-template-rows: auto 1fr auto;
-		grid-gap: 2rem;
-	}
-
-	header {
-		grid-area: hd;
-	}
-
-	aside {
-		grid-area: sd;
-	}
-
-	main {
-		grid-area: main;
-	}
-
-	.articles {
-		display: flex;
-		flex-direction: row;
-	}
-
-	.description {
-		margin: 2%;
-	}
-
-	footer {
-		grid-area: ft;
-	}
-}
